@@ -1,7 +1,5 @@
 package videoclub.videoclubapp;
 
-import javafx.beans.value.ChangeListener;
-import javafx.beans.value.ObservableValue;
 import javafx.collections.FXCollections;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
@@ -9,10 +7,7 @@ import javafx.fxml.FXMLLoader;
 import javafx.fxml.Initializable;
 import javafx.scene.Parent;
 import javafx.scene.control.*;
-import javafx.stage.Stage;
-import javafx.stage.Window;
 import videoclub.videoclubapp.materials.*;
-import videoclub.videoclubapp.users.Member;
 
 import java.io.IOException;
 import java.net.URL;
@@ -20,45 +15,41 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.ResourceBundle;
 
+/**
+ * Controller for the Add new material view. Associated to addMaterial.fxml
+ * @author irenevinaderantón
+ * @version 2
+ */
 public class AddController implements Initializable {
-
     @FXML
     public Button btnAdd;
     @FXML
     public Button btnVal;
     @FXML
-    private Label lblTipo;
-    @FXML
     private ChoiceBox<String> cboxTipos;
-    @FXML
-    private Label lblCodigo;
-    @FXML
-    private TextField txtTitulo;
-    @FXML
-    private Label lblTitulo;
     @FXML
     private TextField txtCodigo;
     @FXML
-    private Label lblAnyo;
+    private TextField txtTitulo;
     @FXML
-    private TextField txtOtros;
-    @FXML
-    private Label lblGenero;
+    private TextField txtAnyo;
     @FXML
     private TextField txtGenero;
     @FXML
-    private Label lblOtros;
-    @FXML
-    private TextField txtAnyo;
+    private TextField txtOtros;
     private List<Material> materials;
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) {
-        //materials = getController().getMaterials().getInventory();
         materials = getController().getMaterials().getInventory();
         cboxTipos.setItems(FXCollections.observableArrayList(
                 "BluRay", "DVD", "VHS", "PlayStation", "Nintendo")
         );
     }
+
+    /**
+     * Method to get the InventoryController
+     * @return InventoryController
+     */
     private InventoryController getController(){
         FXMLLoader loader = new FXMLLoader(InventoryController.class.getResource("inventory.fxml"));
         try{
@@ -69,6 +60,11 @@ public class AddController implements Initializable {
         InventoryController controller = (InventoryController)loader.getController();
         return controller;
     }
+
+    /**
+     * Method to set the right code to our next Material depending on its type
+     * @param actionEvent This method activates once we press de "Validate" button
+     */
     @FXML
     public void setCategory(ActionEvent actionEvent){
         List<Material> aux = new ArrayList<>();
@@ -80,48 +76,48 @@ public class AddController implements Initializable {
                     if (m instanceof BluRay)
                         aux.add(m);
                 }
-                nextNumber = (Integer.parseInt(aux.get(aux.size() - 1).getCode().substring(2))) + 1;
+                nextNumber = (Integer.parseInt(aux.getLast().getCode().substring(2))) + 1;
                 txtCodigo.setText("BR" + nextNumber);
-                txtCodigo.setEditable(false);
                 break;
             case 1:
                 for(Material m: materials){
                     if (m instanceof DVD)
                         aux.add(m);
                 }
-                nextNumber = (Integer.parseInt(aux.get(aux.size() - 1).getCode().substring(3))) + 1;
+                nextNumber = (Integer.parseInt(aux.getLast().getCode().substring(3))) + 1;
                 txtCodigo.setText("DVD" + nextNumber);
-                txtCodigo.setEditable(false);
                 break;
             case 2:
                 for(Material m: materials){
                     if (m instanceof VHS)
                         aux.add(m);
                 }
-                nextNumber = (Integer.parseInt(aux.get(aux.size() - 1).getCode().substring(3))) + 1;
+                nextNumber = (Integer.parseInt(aux.getLast().getCode().substring(3))) + 1;
                 txtCodigo.setText("VHS" + nextNumber);
-                txtCodigo.setEditable(false);
                 break;
             case 3:
                 for(Material m: materials){
                     if (m instanceof Playstation)
                         aux.add(m);
                 }
-                nextNumber = (Integer.parseInt(aux.get(aux.size() - 1).getCode().substring(2))) + 1;
+                nextNumber = (Integer.parseInt(aux.getLast().getCode().substring(2))) + 1;
                 txtCodigo.setText("PS" + nextNumber);
-                txtCodigo.setEditable(false);
                 break;
             case 4:
                 for(Material m: materials){
                     if (m instanceof Nintendo)
                         aux.add(m);
                 }
-                nextNumber = (Integer.parseInt(aux.get(aux.size() - 1).getCode().substring(3))) + 1;
+                nextNumber = (Integer.parseInt(aux.getLast().getCode().substring(3))) + 1;
                 txtCodigo.setText("NIN" + nextNumber);
-                txtCodigo.setEditable(false);
                 break;
         }
     }
+
+    /**
+     * This method creates the new material from the data written in the textfields
+     * @param actionEvent This method activates once we press the Add new button
+     */
     @FXML
     public void addMaterial(ActionEvent actionEvent) {
         Material mat = null;
@@ -158,5 +154,4 @@ public class AddController implements Initializable {
             dialog.showAndWait();
         }
     }
-
 }
